--- a/main/index.html
+++ b/main/index.html
@@ -2,7 +2,9 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="../assets/icon.ico" />
+    <link rel="alternate icon" class="favicon" id="favicon" type="image/png" href="./src/assets/icon.ico">
+    <link id="not_item_list_default_Page_Imag_URL" type="image/png" href="./src/assets/Error.png">
+    <link id="defaultThumbnail" type="image/png" href="./src/assets/picture_icon.png" alt="https://github.com/microsoft/fluentui-emoji/blob/main/LICENSE?license=mit2" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
